--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,9 @@
 name: dart_neuralnet
 author: SlightlyCyborg
 homepage: https://github.com/SlightlyCyborg/dart-neuralnet
-version: 0.1
+version: 0.1.1 
 description: A neural net framework
 dependencies:
   browser: any
   csvparser: any
+  start: any
